--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -17,53 +17,40 @@ compatible = "zmk,combos";
     layers = <LAYERS>; \
   };
 
-/* Missing arabic alpha */
+/* Missing alpha */
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
-
-
-COMBO(Z, &kp Z, 21 22, COL30 COLW30) // Z 
-COMBO(Q, &kp Q, 1 2, COL30 COLW30) // Q
-COMBO(J, &kp J, 2 3, COL30 COLW30) // J 
-COMBO(slash, &kp SLASH, 27 28, COL COL30) // Slash
-
-
-/* HDN experiment */
-COMBO(hdn_z, &kp Z, 21 22, HDN HDNW) // Z
-COMBO(hdn_v, &kp V, 22 23, HDN HDNW) // V
-COMBO(hdn_q, &kp Q, 1 2, HDN HDNW) // Q
-COMBO(hdn_slash, &kp SLASH, 27 28, HDN HDNW) // Slash
+COMBO(Z, &kp Z, 21 22, COL COLW) // Z 
+COMBO(Q, &kp Q, 1 2, COL COLW) // Q
+COMBO(J, &kp J, 2 3, COL COLW) // J 
+COMBO(slash, &kp SLASH, 27 28, COL COLW) // Slash
 
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ)
 
 /* Text processing */
-COMBO(undo, &kp LG(Z), 20 21, COL HDN COL30)
-COMBO(redo, &kp LG(LS(Z)), 20 22, COL HDN COL30)
+COMBO(undo, &kp LG(Z), 20 21, COL)
+COMBO(redo, &kp LG(LS(Z)), 20 22, COL)
+COMBO(select_all, &kp LG(A), 20 23, COL)
+COMBO(cut, &kp LG(X), 11 21, COL)
+COMBO(copy, &kp LG(C), 12 22, COL)
+COMBO(paste, &kp LG(V), 21 22 23, COL)
 
-COMBO(select_all, &kp LG(A), 20 23, COL HDN COL30)
+COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ)
+COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ)
+COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ)
+COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ)
+COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ)
+COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ)
 
-COMBO(cut, &kp LG(X), 11 21, COL HDN COL30)
-COMBO(copy, &kp LG(C), 12 22, COL HDN COL30)
-COMBO(paste, &kp LG(V), 21 22 23, COL HDN COL30)
-
-COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ HDNW COLW30)
-COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ HDNW COLW30)
-
-COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ HDNW COLW30)
-
-COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ HDNW COLW30)
-COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ HDNW COLW30)
-COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ HDNW COLW30)
-
-COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ)
 
 /*                KEY POSITIONS
 
@@ -75,29 +62,29 @@ COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW COL30 COLW30)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN COL30)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN COL30)
-COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL HDN COL30)
+COMBO(alfred, &kp LG(SPACE), 23 26, COL)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
+COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL)
 
-COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW COLW30)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW COLW30)
-COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ HDNW COLW30)
+COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
+COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ)
 
-COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW COL30 COLW30) 
-COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ) 
+COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
 
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN COL30)
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW COLW30)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
 
 /* one hand */
-COMBO(nav1h, &mo_nav, 30 31, COL HDN COL30)
-COMBO(sym1h, &mo_sym, 32 33, COL HDN COL30)
+COMBO(nav1h, &mo_nav, 30 31, COL)
+COMBO(sym1h, &mo_sym, 32 33, COL)
 
-COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ HDNW COLW30)
-COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ HDNW COLW30)
+COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ)
+COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
@@ -107,12 +94,8 @@ COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ HDNW COLW30)
 
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 12 13 30)
-GCOMBO(switch_to_mac30, &to COL30, 11 12 13 30)
-GCOMBO(switch_to_hdn, &to HDN, 11 12 30)
 GCOMBO(switch_to_win, &to COLW, 16 17 33)
-GCOMBO(switch_to_win30, &to COLW30, 16 17 18 33)
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 33)
-GCOMBO(switch_to_hdnw, &to HDNW, 18 19 33)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
 GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
