--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -28,47 +28,41 @@ COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 COMBO(zthal, &kp N, 23 24, ARAQ) // ى
 
-/* HDN experiment */
-COMBO(hdn_z, &kp Z, 20 21, HDN HDNW) // Z
-COMBO(hdn_v, &kp V, 21 22, HDN HDNW) // V
-COMBO(hdn_q, &kp Q, 1 2, HDN HDNW) // Q
-COMBO(hdn_slash, &kp SLASH, 24 25, HDN HDNW) // Slash
-
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HDNW)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HDNW)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HDNW)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HDNW)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HDNW)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HDNW)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ)
 
 /* Text processing */
-COMBO(undo, &kp LG(Z), 10 20, COL HDN)
-COMBO(redo, &kp LG(LS(Z)), 10 21, COL HDN)
+COMBO(undo, &kp LG(Z), 10 20, COL)
+COMBO(redo, &kp LG(LS(Z)), 10 21, COL)
 
-COMBO(select_all, &kp LG(A), 10 22, COL HDN)
+COMBO(select_all, &kp LG(A), 10 22, COL)
 
-COMBO(cut, &kp LG(X), 11 20 , COL HDN)
-COMBO(copy, &kp LG(C), 12 21, COL HDN)
-COMBO(paste, &kp LG(V), 20 21 22, COL HDN)
+COMBO(cut, &kp LG(X), 11 20 , COL)
+COMBO(copy, &kp LG(C), 12 21, COL)
+COMBO(paste, &kp LG(V), 20 21 22, COL)
 
-COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ HDNW)
-COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ HDNW)
+COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ)
+COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ)
 
-COMBO(select_allw, &kp LC(A), 10 22, COLW ARAQ HDNW)
+COMBO(select_allw, &kp LC(A), 10 22, COLW ARAQ)
 
-COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ HDNW)
-COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ HDNW)
-COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ HDNW)
+COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ)
+COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ)
+COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
 
-COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ HDN HDNW)
+COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ)
 
 /* one hand */
-COMBO(nav1h, &mo_nav, 26 27, COL HDN)
-COMBO(sym1h, &mo_sym, 28 29, COL HDN)
+COMBO(nav1h, &mo_nav, 26 27, COL)
+COMBO(sym1h, &mo_sym, 28 29, COL)
 
-COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ HDNW)
-COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ HDNW)
+COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
+COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
 
 /*                KEY POSITIONS
 
@@ -80,20 +74,20 @@ COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ HDNW)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 22 23, COL HDN)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN)
+COMBO(alfred, &kp LG(SPACE), 22 23, COL)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
 
-COMBO(pwrtys, &kp LG(SPACE), 22 23, COLW ARAQ HDNW)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
+COMBO(pwrtys, &kp LG(SPACE), 22 23, COLW ARAQ)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
 
-COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ HDN HDNW)
-COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ HDN HDNW)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
-COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ HDN HDNW)
+COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ)
+COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
+COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
 
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
@@ -103,10 +97,8 @@ COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
   
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 12 13 26)
-GCOMBO(switch_to_hdn, &to HDN, 11 12 26)
 GCOMBO(switch_to_win, &to COLW, 16 17 29)
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
-GCOMBO(switch_to_hdnw, &to HDNW, 18 19 29)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
 GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
