--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -18,11 +18,11 @@ compatible = "zmk,combos";
   };
 
 /* Missing Alphas */
-COMBO(Z, &kp Z, 21 22, COL COLW) // Z 
-COMBO(Q, &kp Q, 20 21, COL COLW) // Q
-COMBO(Q2, &kp Q, 2 3, COL COLW) // Q for vim wq
-COMBO(J, &kp J, 1 2, COL COLW) // J 
-COMBO(slash, &kp SLASH, 24 25, COL COLW ARAQ) // slash and ظ
+COMBO(Z, &kp Z, 21 22, COL COLW CUS CUSW) // Z 
+COMBO(Q, &kp Q, 20 21, COL COLW CUS CUSW) // Q
+COMBO(Q2, &kp Q, 2 3, COL COLW CUS CUSW) // Q for vim wq
+COMBO(J, &kp J, 1 2, COL COLW CUS CUSW) // J 
+COMBO(slash, &kp SLASH, 24 25, COL COLW ARAQ CUS CUSW) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
@@ -34,33 +34,33 @@ COMBO(dot, &kp DOT, 16 17, SYM SYMW) // .
 COMBO(comma, &kp COMMA, 17 18, SYM SYMW) // ,
 
 /* Brackets */
-COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ)
-COMBO(right_bracket, &kp RBKT, 8 18, COL COLW ARAQ)
-COMBO(left_parenthesis, &kp LPAR, 2 12, COL COLW ARAQ)
-COMBO(right_parenthesis, &kp RPAR, 7 17, COL COLW ARAQ)
-COMBO(left_brace, &kp LBRC, 3 13, COL COLW ARAQ)
-COMBO(right_brace, &kp RBRC, 6 16, COL COLW ARAQ)
+COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ CUS CUSW)
+COMBO(right_bracket, &kp RBKT, 8 18, COL COLW ARAQ CUS CUSW)
+COMBO(left_parenthesis, &kp LPAR, 2 12, COL COLW ARAQ CUS CUSW)
+COMBO(right_parenthesis, &kp RPAR, 7 17, COL COLW ARAQ CUS CUSW)
+COMBO(left_brace, &kp LBRC, 3 13, COL COLW ARAQ CUS CUSW)
+COMBO(right_brace, &kp RBRC, 6 16, COL COLW ARAQ CUS CUSW)
 
 /* Text processing */
-COMBO(cut, &kp LG(X), 11 20 , COL)
-COMBO(copy, &kp LG(C), 12 21, COL)
-COMBO(paste, &kp LG(V), 20 21 22, COL)
+COMBO(cut, &kp LG(X), 11 20 , COL CUS)
+COMBO(copy, &kp LG(C), 12 21, COL CUS)
+COMBO(paste, &kp LG(V), 20 21 22, COL CUS)
 
-COMBO(cutw, &kp LC(X), 11 20, COLW ARAQ)
-COMBO(copyw, &kp LC(C), 12 21, COLW ARAQ)
-COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
+COMBO(cutw, &kp LC(X), 11 20, COLW ARAQ CUSW)
+COMBO(copyw, &kp LC(C), 12 21, COLW ARAQ CUSW)
+COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ CUSW)
 
-COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ)
+COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
 
 /* one hand */
-COMBO(nav1h, &macro_nav, 26 27, COL)
-COMBO(sym1h, &macro_sym, 28 29, COL)
+COMBO(nav1h, &macro_nav, 26 27, COL CUS)
+COMBO(sym1h, &macro_sym, 28 29, COL CUS)
 
-COMBO(nav1hw, &macro_navW, 26 27, COLW ARAQ)
-COMBO(sym1hw, &macro_symW, 28 29, COLW ARAQ)
+COMBO(nav1hw, &macro_navW, 26 27, COLW ARAQ CUSW)
+COMBO(sym1hw, &macro_symW, 28 29, COLW ARAQ CUSW)
 
-COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL)
-COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ)
+COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL CUS)
+COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ CUSW)
 
 
 /*                KEY POSITIONS
@@ -73,20 +73,20 @@ COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 26 29, COL)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
+COMBO(alfred, &kp LG(SPACE), 26 29, COL CUS)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL CUS)
 
-COMBO(pwrtys, &kp LG(SPACE), 26 29, COLW ARAQ)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
+COMBO(pwrtys, &kp LG(SPACE), 26 29, COLW ARAQ CUSW)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ CUSW)
 
-COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ)
-COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
-COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ)
+COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ CUS CUSW)
+COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ CUS CUSW)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ CUS CUSW)
+COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ CUS CUSW)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL CUS)
 
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ CUSW)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
@@ -98,6 +98,9 @@ COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
 GCOMBO(switch_to_mac, &to COL, 12 13 26)
 GCOMBO(switch_to_win, &to COLW, 16 17 29)
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
+
+GCOMBO(switch_to_cus_mac, &to CUS, 11 12 26)
+GCOMBO(switch_to_cus_win, &to CUSW, 17 18 29)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
 GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
